--- a/HTML_section/facebook.html
+++ b/HTML_section/facebook.html
@@ -6,40 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>facebook</title>
-    <link rel="stylesheet" href="./">
+    <link rel="stylesheet" href="fb.css">
 
 <body>
     
-        
-        <h1>facebook</h1>
+       <div>
+        <h1>Facebook</h1>
         <h4>Facebook helps you connect and<br>share with the people in your life.</h4>
         <table>
-            <tr>
+            <tr id="name">
                 <td>
                     <input type="text" name="" id="" placeholder="email adress or phone number">
                 </td>
             </tr>
-            <tr>
+            <tr id="pass">
                 <td>
                     <input type="password" placeholder="Password">
                 </td>
             </tr>
-            <tr>
-                <td colspan="2" align="center">
+            <tr id="log">
+                <td colspan="2">
                     <input type="button" value="Log in">
                 </td>
             </tr>
-            <tr>
-                <td align="center">
+            <tr id="forgot">
+                <td>
                     <a href="#">forgot password?</a>
                 </td>
             </tr>
-            <tr>
-                <td align="center">
+            <tr id="sign">
+                <td>
                     <a href="signupFB.html"> <input type="button" value="Create New Account"> </a>
                 </td>
             </tr>
         </table>
+    </div>
 </body>
 
 </html>
