--- a/HTML_section/signupFB.html
+++ b/HTML_section/signupFB.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup page</title>
+    <link rel="stylesheet" href="signup.css">
 </head>
 
 <body>
-    <h1>Sign Up</h1>
-    <h5>It's quick and easy</h5>
+    <div id="fir">
+    <h1 class="a">Sign Up</h1>
+    <h5 class="a">It's quick and easy</h5>
     <table>
         <tr>
             <td>
@@ -30,9 +32,10 @@
                 <input type="password" placeholder="New password">
             </td>
         </tr>
+    </div>
 
     </table>
-
+    <div id="sec">
     <label for="">Date of birth</label>
     <select name="" id="">
         <option value="">1</option>
@@ -52,14 +55,17 @@
         <option value="">2000</option>
         <option value="">2001</option>
     </select><br>
+    
     <label for="">gender</label>
     <input type="radio" name="gender" id="">male
-    <input type="radio" name="gender" id="">female
-    <h6>By clicking Sign Up, you agree to our Terms, Data Policy and Cookie Policy. <br> You may receive SMS
+    <input type="radio" name="gender" id="">female </div>
+    <h6 class="a">By clicking Sign Up, you agree to our Terms, Data Policy and Cookie Policy. <br> You may receive SMS
         notifications
         from us and can opt out at any time</h6>
-    <input type="button" value="Sign Up">
-    <a href="facebook.html"> <input type="button" value="back"></a>
+        
+    <input type="button" value="Sign Up" class="last">
+    <a href="facebook.html"> <input type="button" value="back" class="last"></a>
+
 
 </body>
 
