--- a/JAVASCRIPT/Document_Objct_Model/dom1.html
+++ b/JAVASCRIPT/Document_Objct_Model/dom1.html
@@ -22,6 +22,8 @@
         <li class="methode">getElementsByTagname</li>
         <li class="methode">getElementsByClass</li>
         <li>getElementsById</li>
+        <li>querySelector()</li>
+        <li>querySelectorAll()</li>
     </ul>
     <a href="#">welcome</a>
     <a href="#">to dom</a>
