--- a/HTML_section/admins_dasboard/admin.html
+++ b/HTML_section/admins_dasboard/admin.html
@@ -29,33 +29,39 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle topnav" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            mega menu
+                            <img class="searchimage" src="search.png" alt="">
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle topnav" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            settings
+                            Mega menu
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link dropdown-toggle topnav" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Settings
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle topnav" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            projects
+                            Projects
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                        </ul> -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -65,8 +71,12 @@
             </div>
         </div>
     </nav>
+
+
+<!-- nav bar left section -->
+
     <div class="position-sticky pt-3 leftbox">
-        <ul class="nav flex-column">
+        <ul class="nav flex-column top">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -140,6 +150,8 @@
             </li>
         </ul>
 
+        <!-- second part -->
+
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
             <span>Saved reports</span>
             <a class="link-secondary" href="#" aria-label="Add a new report">
@@ -152,7 +164,7 @@
                 </svg>
             </a>
         </h6>
-        <ul class="nav flex-column mb-2">
+        <ul class="nav flex-column mb-2 bottom">
             <li class="nav-item">
                 <a class="nav-link" href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -210,6 +222,18 @@
                 </a>
             </li>
         </ul>
+    </div>
+
+    <div class="row">
+        <div class="col-12">
+            <div>
+                rwrgrgwrg
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-lg-6">gsdsds</div>
+        <div class="col-12 col-lg-6">sasfas</div>
     </div>
 
 </body>
