--- a/JAVASCRIPT/Document_Objct_Model/Bank/bank.html
+++ b/JAVASCRIPT/Document_Objct_Model/Bank/bank.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- java -->
+    <script src="bankscript.js"></script>
     <!-- css link -->
     <link rel="stylesheet" href="bank.css">
     <!-- bootsrap link -->
@@ -20,9 +22,9 @@
 
             <form action="">
                 <label for="" class="form-label">Enter your Account Number</label>
-                <input type="email" class="form-control" id="exampleInputEmail1 accno" aria-describedby="emailHelp">
+                <input type="email" class="form-control" id="acno" aria-describedby="emailHelp">
                 <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1 password">
+                <input type="password" class="form-control" id="pwd">
                 <button type="button" class="btn btn-primary login mt-4" onclick="Bank.login()">log in</button>
             </form>
 
@@ -30,6 +32,6 @@
         <div class="col-12 col-md-4 col-lg-4"></div>
     </div>
 </body>
-<script src="script.js"></script>
+
 
 </html>
