--- a/JAVASCRIPT/ajaxLearning/createPostFetch.html
+++ b/JAVASCRIPT/ajaxLearning/createPostFetch.html
@@ -19,29 +19,35 @@
     <input type="text" class="uid">
     <button onclick="createPost()">CreateNewPost</button>
 </body>
-<script>
 
+<script>
     function createPost() {
-        var request = new XMLHttpRequest()
         var title = document.querySelector(".title").value
         var bdy = document.querySelector(".bdy").value
         var uid = document.querySelector(".uid").value
-        request.open("post", "https://jsonplaceholder.typicode.com/users")
         var data = {
             title: title,
             body: bdy,
             userId: uid
         }
-        request.send(data)
-        request.onreadystatechange = () => {
-            if (request.readyState == 4) {
-                if ((request.status > 199) & (request.status < 300)) {
-                    var data = JSON.parse(request.responseText)
-                    alert("Succesfully Created")
-                }
+        fetch("https://jsonplaceholder.typicode.com/posts", {
+            method: 'POST',
+            body: JSON.stringify(data),
+            headers: {
+                'Content-type': 'application/json; charset=UTF-8',
+            },
+         })
+         .then(Response=>{
+            console.log(Response.status)
+            if(!Response.ok){
+                throw new Error("failed"+Response.status)
             }
-        }
+            return Response.json()
+         })
+         .then(alert("task comlpeted"))
+         .catch(err=>alert(err))
     }
+
 </script>
 
 </html>
